tests/ui/imports/macro-paths.stderr
error[E0659]: `bar` is ambiguous
  --> $DIR/macro-paths.rs:13:5
   |
LL |     bar::m! {
   |     ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and a macro-expanded name in the same module during import or macro resolution
note: `bar` could refer to the module defined here
  --> $DIR/macro-paths.rs:14:9
   |
LL |         mod bar { pub use two_macros::m; }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: `bar` could also refer to the module imported here
  --> $DIR/macro-paths.rs:12:9
   |
LL |     use foo::*;
   |         ^^^^^^
   = help: consider adding an explicit import of `bar` to disambiguate

error[E0659]: `baz` is ambiguous
  --> $DIR/macro-paths.rs:23:5
   |
LL |     baz::m! {
   |     ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `baz` could refer to the module defined here
  --> $DIR/macro-paths.rs:24:9
   |
LL |         mod baz { pub use two_macros::m; }
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: `baz` could also refer to the module defined here
  --> $DIR/macro-paths.rs:18:1
   |
LL | / pub mod baz {
LL | |     pub use two_macros::m;
LL | | }
   | |_^
   = help: use `crate::baz` to refer to this module unambiguously

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
